--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,21 @@
 <div id="root"></div>
+
+<a
+      style="
+        font: normal 12px sans-serif;
+        color: blue;
+        position: fixed;
+        bottom: 5px;
+        left: 5px;
+        border: 1px solid black;
+        padding: 5px;
+        border-radius: 4px;
+        margin: 5px 0 0 5px;
+        display: inline-block;
+        text-decoration: none;
+      "
+      href="https://www.youtube.com/@WebDevUnlimited"
+      target="_blank"
+      class="yt-badge"
+      >&#9654; @WebDevUnlimited • Tech Videos</a
+    >
